<resources>
	<string name="ad_banner_unit_id">ca-app-pub-7237046001480876/1543241467</string>
	<string name="app_name">GoBirdie!</string>

	<string name="score_default">0</string>
	<string name="score_label">Score</string>
	<string name="score_best">Best</string>
	<string name="score_lifetime">Lifetime</string>

	<string name="btn_play">Play!</string>
	<string name="btn_store">Store</string>
	<string name="btn_music">Music OFF</string>
	<string name="btn_sound">Sound OFF</string>
	<string name="btn_rate">Rate</string>
	<string name="btn_about">About</string>
	<string name="btn_home">Home</string>
	<string name="btn_continue">Replay</string>
	<string name="btn_start">Start!</string>

	<string name="txtOptsMusicLabel">Music</string>
	<string name="txtOptsSoundLabel">Sound Fx</string>

	<string name="scene1Text">Life as Go Birdie is simple and carefree. Not a worry in the world.</string>
	<string name="scene2Text">You just need lots of fruit to stay happy.</string>
	<string name="scene3Text">Tap to fly and grab as much fruit as you can!</string>
	<string name="scene4Text">Swipe to fly up up up!</string>
	<string name="scene5Text">Don\'t forget to bring back fruit to your birdhouse.</string>
	<string name="scene6Text">Be careful of Pete the Monkey and his famous monkey slap.</string>
	<string name="scene7Text">Above all, stay away from Sgt. Eagle Speagle. He\'s trouble!</string>
	<string name="scene8Text">Special guest appearance: Blake the Snake.</string>

	<string name="swipe_arrow">\u2192</string>
	<string name="skip_intro">[Skip Intro]</string>
</resources>
