<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:id="@+id/background"
				android:background="@drawable/screen_welcome"
				tools:context="${relativePackage}.${activityClass}" >

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="false"
		android:layout_marginTop="@dimen/main_layout_margin_top"
		android:orientation="vertical" >

		<Button
			android:id="@+id/btnPlay"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_play"
			android:background="@drawable/button"
			android:textColor="@color/colorRed"
			android:textSize="@dimen/button_text_size"
			android:onClick="startGameActivity"/>

		<Button
			android:id="@+id/btnMusicSettings"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_music"
			android:background="@drawable/button"
			android:textColor="@color/colorRed"
			android:textSize="@dimen/button_text_size"
			android:onClick="toggleMusicSettings"
			android:layout_marginTop="@dimen/button_margin_top"/>

		<Button
			android:id="@+id/btnSoundSettings"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_sound"
			android:background="@drawable/button"
			android:textColor="@color/colorRed"
			android:textSize="@dimen/button_text_size"
			android:onClick="toggleSoundSettings"
			android:layout_marginTop="@dimen/button_margin_top"/>

		<Button
			android:id="@+id/btnAbout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_about"
			android:background="@drawable/button"
			android:textColor="@color/colorRed"
			android:textSize="@dimen/button_text_size"
			android:onClick="startAboutActivity"
			android:layout_marginTop="@dimen/button_margin_top"/>

	</LinearLayout>

</RelativeLayout>
