<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:id="@+id/background"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/screen_welcome"
	tools:context="net.usrlib.gobirdie.view.SwipeActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="false"
		android:layout_marginTop="@dimen/main_layout_margin_top"
		android:gravity="center"
		android:orientation="vertical">

		<Button
			android:id="@+id/btnStart"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/button_margin_top"
			android:background="@drawable/button"
			android:onClick="startHomeActivity"
			android:text="@string/btn_start"
			android:textColor="@color/colorRed"
			android:textSize="@dimen/button_text_size"
			android:layout_gravity="center"/>
	</LinearLayout>

	<com.mindorks.placeholderview.SwipePlaceHolderView
		android:id="@+id/swipe_holder_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"/>

	<TextView
		android:id="@+id/swipe_arrow"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="center"
		android:gravity="center|end"
		android:textColor="@color/cardview_light_background"
		android:textSize="@dimen/swipe_arrow_text_size"
		android:text="@string/swipe_arrow"
		android:visibility="invisible"/>

	<TextView
		android:id="@+id/skip_intro"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/swipe_card_view_skip_intro_margin"
		android:gravity="bottom|end"
		android:layout_alignParentBottom="true"
		android:text="@string/skip_intro"
		android:textColor="@color/colorRed"
		android:clickable="true"
		android:onClick="startHomeActivity"
		android:visibility="invisible"
		style="@style/Base.TextAppearance.AppCompat.Large"/>

	<include layout="@layout/smart_banner_ad_view" />
</RelativeLayout>
